# ckanext-harvest

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  conftest.py  dev-requirements.txt  get_user_patch.diff  here_patch.diff  pip-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-core.ini  test-ga.ini  test-nose.ini  test.ini
.github/workflows/: test.yml
.tx/: config
ca-custom/: all.pem  firefox-db2pem.sh  regenerate.sh
ca-custom/partials/: ca-bundle.crt  ca-firefox.crt  dados.ufcspa.edu.br
ckanext/harvest/: __init__.py  cli.py  harvesters.py  helpers.py  html.py  interfaces.py  log.py  plugin.py  queue.py  utils.py  views.py
ckanext/harvest/assets/: webassets.yml
ckanext/harvest/assets/styles/: less  variables.less
ckanext/harvest/commands/: harvester.py
ckanext/harvest/controllers/: api.py  harvesting.py  org.py  organization.py  view.py
ckanext/harvest/fanstatic_library/: webassets.yml
ckanext/harvest/fanstatic_library/js/: harvest.js
ckanext/harvest/fanstatic_library/styles/: harvest.css  harvest.less  mixins.less
ckanext/harvest/harvesters/: __init__.py  base.py  ckanharvester.py  retry.py
ckanext/harvest/i18n/: ckanext-harvest.pot
ckanext/harvest/lib/: __init__.py
ckanext/harvest/logic/: __init__.py  dictization.py  schema.py  validators.py
ckanext/harvest/logic/action/: create.py  delete.py  get.py  notify.py  patch.py  update.py
ckanext/harvest/logic/auth/: __init__.py  create.py  delete.py  get.py  patch.py  update.py
ckanext/harvest/migration/harvest/: alembic.ini
ckanext/harvest/model/: __init__.py
ckanext/harvest/plugin/: __init__.py  flask_plugin.py  harvest_plugin_extended.py  pylons_plugin.py
ckanext/harvest/templates/: base.html  header.html  index.html
ckanext/harvest/templates-bs3/snippets/: add_source_button.html  job_details.html  job_error_summary.html  source_item.html  source_list.html
ckanext/harvest/templates-bs3/source/: about.html  admin.html  base.html  read_base.html  search.html
ckanext/harvest/templates/admin/: base.html
ckanext/harvest/templates/emails/: error_email.txt  summary_email.txt
ckanext/harvest/templates/snippets/: add_source_button.html  harvest_source_job_details.html  job_details.html  (+6 more)
ckanext/harvest/templates_new/: index.html
ckanext/harvest/tests/: conftest.py  factories.py  fixtures.py  lib.py  test_action.py  test_auth.py  test_blueprint.py  test_controller.py  test_form_api.py  test_harvest_source.py  test_queue.py  test_queue2.py  test_timeouts.py
config/supervisor/: ckan_harvesting.conf
i18n/: ckanext-harvest.pot
i18n/sv/LC_MESSAGES/: ckanext-harvest.mo  ckanext-harvest.po
public/ckanext/harvest/: mapviewer.css  style.css
templates/ckanext/harvest/: create.html  index.html  map.html  show.html
tests/: test_api.py  test_functional.py  test_model.py
tests/gemini2_examples/: index.html
(+83 files in other folders)
